--- a/zhanjianyouxi/index.html
+++ b/zhanjianyouxi/index.html
@@ -6,17 +6,16 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>战舰游戏</title>
   <link rel ="stylesheet" href = "index.css" type ="text/css">
-  <script src = "a.js"></script>
 </head>
 <body>
   <div id = "board">
-    <div id = "xiaoxi"></div>
+    <div id = "messageArea"></div>
     <table>
       <tr>
         <td id = "00"></td><td id = "01"></td><td id = "02"></td><td id = "03"></td><td id = "04"></td><td id = "05"></td><td id = "06"></td>
       </tr>
       <tr>
-          <td id = "10"></td><td id = "11"></td><td id = "12"></td><td id = "13" class ="hit"></td><td id = "14"></td><td id = "15"></td><td id = "16" clss ="miss"></td>
+          <td id = "10"></td><td id = "11"></td><td id = "12"></td><td id = "13"></td><td id = "14"></td><td id = "15"></td><td id = "16"></td>
       </tr>
       <tr>
           <td id = "20"></td><td id = "21"></td><td id = "22"></td><td id = "23"></td><td id = "24"></td><td id = "25"></td><td id = "26"></td>
@@ -35,9 +34,10 @@
       </tr>
     </table>
     <form>
-      <input type = "caice" id = "guess" weizhi ="A0">
-      <input type = "annou" id = "fire" value ="Fire!">
+      <input type = "text" id = "guessInput" placeholder ="">
+      <input type = "button" id = "fireButton" value ="Fire!">
     </form>
   </div>
+  <script src = "a.js"></script>
 </body>
 </html>
